Fixed hr display to align with how the blog post does it.

--- a/public/global.css
+++ b/public/global.css
@@ -88,6 +88,9 @@ img {
 .content hr {
   margin: 1rem 300px 1rem 300px;
   max-width: 800px;
+  border-style: solid;
+  border-color: rgba(0,0,0,0.2);
+  border-width: 1px;
 }
 
 .content p {
@@ -243,6 +246,6 @@ img {
   }
 
   .content hr {
-    margin: 0.5rem;
+    margin: 0.5rem 0;
   }
 }
